# catflap

./: .gitignore  LICENSE  README.md  SKILL.md  catflap  catflap.py  logcat-tui  logcat_tui.py  pyproject.toml  test_app_integration.py  test_catflap.py  test_logcat_tui.py
catflap/: __init__.py  __main__.py  adb.py  app.py  cli.py  crash.py  entry.py  export.py  filtering.py  state.py  widgets.py
