[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "catflap"
version = "0.2.0"
description = "Terminal UI for Android logcat with Android Studio-grade filtering"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Lucas Bonafé" }]
dependencies = ["textual>=8.2,<9"]
keywords = ["android", "logcat", "adb", "tui", "terminal"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]

[project.urls]
Homepage = "https://github.com/lsbonafe/catflap"
Issues = "https://github.com/lsbonafe/catflap/issues"

[project.scripts]
catflap = "catflap:main"

[tool.setuptools]
py-modules = ["catflap"]
